# pytorch-cpp-model

./: CMakeLists.txt  README.md  create_model.py  make_script.sh  mobilenetv2.py  predict-app.cpp  predict-app1.cpp
